--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
+#Sublime nature exclusions
+*.sublime-workspace
+*.sublime-project
+ 
+#MavensMate nature exclusions
+config/*
+mm.log
+ 
+#OPTIONAL Apex scripts exclusion
+# - Rule 1 excludes the contents of the apex-scripts folder
+# - Rule 2 adds in NAMED apex scripts
+# Together: excludes scripts run though MavensMate’s 
+#  execute anonymous functionality, while keeping named scripts
+apex-scripts/*
+!apex-scripts/*.cls
